--- a/FitTrack/MainWindow.xaml
+++ b/FitTrack/MainWindow.xaml
@@ -10,12 +10,12 @@
         <Frame x:Name="MainFrame" Background="#D3D3D3"/>
 
 
-
-        <Label Content="FitTrack" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="20"  FontStyle="Italic" Margin="0,99,0,0" RenderTransformOrigin="0.5,0.5" Width="269" HorizontalContentAlignment="Center" BorderThickness="10" BorderBrush="Black">
-            
-            
-        </Label>
-
+<!--En label med namnet av appen/hemsidan (FitTrack)-->
+        <Label x:Name="LabelTitle" Content="FitTrack" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="20"  FontFamily="Arial" Margin="0,99,0,0" RenderTransformOrigin="0.5,0.5" Width="269" HorizontalContentAlignment="Center" BorderThickness="5" BorderBrush="Black"/>
+        
+        <!--En textbox med en text ovan som försvinner när text kommer in i TextBoxen-->
+        <TextBlock x:Name="UsernameInputTEXT" Text="Username" HorizontalAlignment="Left" Margin="201,217,0,181" TextAlignment="Center" VerticalAlignment="Center" Width="150" Foreground="Gray"/>
+        <TextBox x:Name="UsernameInput" HorizontalAlignment="Left" Margin="201,217,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="150" Height="36" BorderBrush="Black" />
 
 
     </Grid>
