--- a/FitTrack/Windows/WorkoutDetailsWindow.xaml
+++ b/FitTrack/Windows/WorkoutDetailsWindow.xaml
@@ -1,13 +1,12 @@
-﻿<Window x:Class="FitTrack.RegisterWindow"
+﻿<Window x:Class="FitTrack.Windows.WorkoutDetailsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:FitTrack"
+        xmlns:local="clr-namespace:FitTrack.Windows"
         mc:Ignorable="d"
-        Title="RegisterWindow" Height="450" Width="800">
+        Title="WorkoutDetailsWindow" Height="450" Width="800">
     <Grid>
-        <Frame x:Name="RegisterFrame" Background="#D3D3D3"/>
-
+        
     </Grid>
 </Window>
