--- a/FitTrack/Windows/WorkoutsWindow.xaml
+++ b/FitTrack/Windows/WorkoutsWindow.xaml
@@ -6,8 +6,44 @@
         xmlns:local="clr-namespace:FitTrack"
         mc:Ignorable="d"
         Title="WorkoutsWindow" Height="450" Width="800">
+    <Window.Background>
+        <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+            <GradientStop Color="#D3D3D3" Offset="0.0" />
+            <GradientStop Color="Black" Offset="2.0" />
+        </LinearGradientBrush>
+    </Window.Background>
     <Grid>
-        <Frame x:Name="WorkoutsFrame" Background="#D3D3D3"/>
+
+        <!--  -->
+        <Label Content="Your Workouts" FontSize="24" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="375,17,0,0" VerticalContentAlignment="Stretch" BorderThickness="3" BorderBrush="Black"/>
+
+
+        <!-- Lista för att visa träningspass -->
+        <ListBox x:Name="WorkoutsList" HorizontalAlignment="Left" Margin="83,70,0,107" Width="476" DisplayMemberPath="Name" />
+
+        <!-- Knappar för att hantera träningspass -->
+        <Button x:Name="Addbtn"  Content="Add Workout" Width="150" Height="30" HorizontalAlignment="Right" Margin="0,384,567,20"  Click="Addbtn_Click" />
+        <Button x:Name="RemoveBtn"  Content="Remove Workout" Width="150" Height="30" HorizontalAlignment="Right" Margin="0,384,387,20"  Click="RemoveBtn_Click"/>
+        <Button x:Name="DetailsBtn" Content="Details" Width="150" Height="30" HorizontalAlignment="Right" Margin="0,384,218,20" Click="DetailsBtn_Click"/>
+
+        <!-- Utloggningsknapp -->
+        <Button x:Name="LogBtn" Content="Log Out" Background="Black" Foreground="White" Width="100"  HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,10,360"  Click="Button_Click"/>
+
+        <!-- TextBox för att söka efter träningspass -->
+        <TextBox x:Name="SearchTextBox" Text="Search workouts..." Width="190" HorizontalAlignment="Left" Margin="83,33,0,370" KeyUp="SearchTextBox_KeyUp"/>
+
+        <!-- ComboBox för att välja typ av träning -->
+        <ComboBox x:Name="WorkoutTypeComboBox" HorizontalAlignment="Left" Margin="200,332,0,0" VerticalAlignment="Top" Width="200" SelectionChanged="WorkoutTypeComboBox_SelectionChanged">
+            <ComboBoxItem Content="All"/>
+            <ComboBoxItem Content="Cardio"/>
+            <ComboBoxItem Content="Strength"/>
+        </ComboBox>
+
+        <!-- info knapp -->
+        <Button x:Name="InfoBtn" Content="Info" Width="80" Height="30" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Background="Black" Foreground="White" Click="InfoBtn_Click"/>
+
+
 
     </Grid>
+
 </Window>
