--- a/FitTrack/Windows/MainWindow.xaml
+++ b/FitTrack/Windows/MainWindow.xaml
@@ -6,12 +6,18 @@
         xmlns:local="clr-namespace:FitTrack"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.Background>
+        <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+            <GradientStop Color="#D3D3D3" Offset="0.0" />
+            <GradientStop Color="Black" Offset="2.0" />
+        </LinearGradientBrush>
+    </Window.Background>
     <Grid>
-        <Frame x:Name="MainFrame" Background="#D3D3D3"/>
+        <Frame x:Name="MainFrame" />
 
 
         <!--En label med namnet av appen/hemsidan (FitTrack)-->
-        <Label x:Name="LabelTitle" Content="FitTrack" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="20"  FontFamily="Arial" Margin="0,101,0,0" RenderTransformOrigin="0.5,0.5" Width="269" HorizontalContentAlignment="Center" BorderThickness="5" BorderBrush="Black"/>
+        <Label x:Name="LabelTitle" Content="FitTrack" HorizontalAlignment="Center" VerticalAlignment="Top" FontFamily="Arial" Margin="0,101,0,0" RenderTransformOrigin="0.5,0.5" Width="269" HorizontalContentAlignment="Center" BorderThickness="5" BorderBrush="Black" FontSize="20" FontWeight="UltraBold" />
 
         <!--En textbox med en text ovan som försvinner när text kommer in i TextBoxen-->
         <TextBox x:Name="UsernameInput" HorizontalAlignment="Left" Margin="157,220,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="162" Height="40" BorderBrush="Black" MouseEnter="UsernameInput_MouseEnter" MouseLeave="UsernameInput_MouseLeave" TextAlignment="Center" TextChanged="UsernameInput_TextChanged"/>
@@ -21,13 +27,14 @@
         <!--En PasswordBox för att ta emot lösenord och och spara det. Samma placeholder funktion som username.-->
         <PasswordBox x:Name="PasswordInput" HorizontalAlignment="Right" Margin="0,220,168,0" VerticalAlignment="Top" Width="162" Height="40" BorderBrush="Black" MouseEnter="PasswordInput_MouseEnter" MouseLeave="PasswordInput_MouseLeave" PasswordChanged="PasswordInput_PasswordChanged" />
         <TextBlock x:Name="PasswordInputTEXT" Text="Password" HorizontalAlignment="Right" Margin="0,220,168,0" VerticalAlignment="Top" Width="162" Height="40" Foreground="Gray" TextAlignment="Center" MouseEnter="PasswordInputTEXT_MouseEnter" MouseLeave="PasswordInputTEXT_MouseLeave"/>
-        
+
         <!--En knapp som försöker logga in med respektive uppgifter-->
         <Button x:Name="LoginButton" Content="Press to Login" HorizontalAlignment="Center" Margin="0,295,0,0" VerticalAlignment="Top" Height="39" Width="120" Background="White" FontFamily="Arial" Click="LoginButton_Click" BorderBrush="Black"/>
-       
-        
+
+
         <!--Registrerings knapp som tar en till RegisterWindow, där man kan skapa en användare.-->
-        <Button x:Name="RegisterButton" Content="Register" HorizontalAlignment="Left" Margin="62,44,0,0" VerticalAlignment="Top" Height="42" Width="125" Background="White" FontFamily="Arial" Click="RegisterButton_Click" />
+        <Button x:Name="RegisterButton" Content="Register" HorizontalAlignment="Left" Margin="649,32,0,0" VerticalAlignment="Top" Height="42" Width="125" Background="White" FontFamily="Arial" Click="RegisterButton_Click" />
+        <Button x:Name="ForgotPassButton" Content="Forgot Password" Background="White" HorizontalAlignment="Center" Margin="0,364,0,0" VerticalAlignment="Top" Height="41" Width="136" BorderBrush="Black" Click="ForgotPassButton_Click"/>
 
 
 
