--- a/FitTrack/Windows/MainWindow.xaml
+++ b/FitTrack/Windows/MainWindow.xaml
@@ -13,9 +13,6 @@
         </LinearGradientBrush>
     </Window.Background>
     <Grid>
-        <Frame x:Name="MainFrame" />
-
-
         <!--En label med namnet av appen/hemsidan (FitTrack)-->
         <Label x:Name="LabelTitle" Content="FitTrack" HorizontalAlignment="Center" VerticalAlignment="Top" FontFamily="Arial" Margin="0,101,0,0" RenderTransformOrigin="0.5,0.5" Width="269" HorizontalContentAlignment="Center" BorderThickness="5" BorderBrush="Black" FontSize="20" FontWeight="UltraBold" />
 
@@ -33,8 +30,10 @@
 
 
         <!--Registrerings knapp som tar en till RegisterWindow, där man kan skapa en användare.-->
-        <Button x:Name="RegisterButton" Content="Register" HorizontalAlignment="Left" Margin="649,32,0,0" VerticalAlignment="Top" Height="42" Width="125" Background="White" FontFamily="Arial" Click="RegisterButton_Click" />
-        <Button x:Name="ForgotPassButton" Content="Forgot Password" Background="White" HorizontalAlignment="Center" Margin="0,364,0,0" VerticalAlignment="Top" Height="41" Width="136" BorderBrush="Black" Click="ForgotPassButton_Click"/>
+        <Button x:Name="RegisterBTN" Content="Register" HorizontalAlignment="Left" Margin="649,32,0,0" VerticalAlignment="Top" Height="42" Width="125" Background="White" FontFamily="Arial" Click="RegisterButton_Click" />
+        
+        <!--En knapp som tar användaren till ''Glömt lösenord'' för att återställa-->
+        <Button x:Name="ForgotPassBTN" Content="Forgot Password" Background="White" HorizontalAlignment="Center" Margin="0,364,0,0" VerticalAlignment="Top" Height="41" Width="136" BorderBrush="Black" Click="ForgotPassButton_Click"/>
 
 
 
