--- a/FitTrack/Windows/MainWindow.xaml
+++ b/FitTrack/Windows/MainWindow.xaml
@@ -18,7 +18,7 @@
 
         <!--En textbox med en text ovan som försvinner när text kommer in i TextBoxen-->
         <TextBox x:Name="UsernameInput" HorizontalAlignment="Left" Margin="157,220,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="162" Height="40" BorderBrush="Black" MouseEnter="UsernameInput_MouseEnter" MouseLeave="UsernameInput_MouseLeave" TextAlignment="Center" TextChanged="UsernameInput_TextChanged"/>
-        <TextBlock x:Name="UsernameInputTEXT" Text="Username" HorizontalAlignment="Left" Margin="157,220,0,0" TextAlignment="Center" VerticalAlignment="Top" Width="162" Foreground="Gray" Height="39" MouseEnter="UsernameInputTEXT_MouseEnter" MouseLeave="UsernameInputTEXT_MouseLeave"  />
+        <TextBlock x:Name="UsernameInputTEXT" Text="Username" HorizontalAlignment="Left" Margin="157,220,0,0" TextAlignment="Center" VerticalAlignment="Top" Width="162" Foreground="Gray" Height="39" MouseEnter="UsernameInputTEXT_MouseEnter" MouseLeave="UsernameInputTEXT_MouseLeave"/>
 
 
         <!--En PasswordBox för att ta emot lösenord och och spara det. Samma placeholder funktion som username.-->
@@ -26,14 +26,14 @@
         <TextBlock x:Name="PasswordInputTEXT" Text="Password" HorizontalAlignment="Right" Margin="0,220,168,0" VerticalAlignment="Top" Width="162" Height="40" Foreground="Gray" TextAlignment="Center" MouseEnter="PasswordInputTEXT_MouseEnter" MouseLeave="PasswordInputTEXT_MouseLeave"/>
 
         <!--En knapp som försöker logga in med respektive uppgifter-->
-        <Button x:Name="LoginButton" Content="Press to Login" HorizontalAlignment="Center" Margin="0,295,0,0" VerticalAlignment="Top" Height="39" Width="120" Background="White" FontFamily="Arial" Click="LoginButton_Click" BorderBrush="Black"/>
+        <Button x:Name="LoginButton" Content="Press to Login" HorizontalAlignment="Center" Margin="0,295,0,0" VerticalAlignment="Top" Height="39" Width="120" Background="White" FontFamily="Arial" Click="LogInBTN_Click" BorderBrush="Black"/>
 
 
         <!--Registrerings knapp som tar en till RegisterWindow, där man kan skapa en användare.-->
-        <Button x:Name="RegisterBTN" Content="Register" HorizontalAlignment="Left" Margin="649,32,0,0" VerticalAlignment="Top" Height="42" Width="125" Background="White" FontFamily="Arial" Click="RegisterButton_Click" />
+        <Button x:Name="RegisterBTN" Content="Register" HorizontalAlignment="Left" Margin="649,32,0,0" VerticalAlignment="Top" Height="42" Width="125" Background="White" FontFamily="Arial" Click="RegisterBTN_Click" />
         
         <!--En knapp som tar användaren till ''Glömt lösenord'' för att återställa-->
-        <Button x:Name="ForgotPassBTN" Content="Forgot Password" Background="White" HorizontalAlignment="Center" Margin="0,364,0,0" VerticalAlignment="Top" Height="41" Width="136" BorderBrush="Black" Click="ForgotPassButton_Click"/>
+        <Button x:Name="ForgotPassBTN" Content="Forgot Password" Background="White" HorizontalAlignment="Center" Margin="0,364,0,0" VerticalAlignment="Top" Height="41" Width="136" BorderBrush="Black" Click="ForgotPassBTN_Click"/>
 
 
 
