--- a/FitTrack/Windows/UserDetailsWindow.xaml
+++ b/FitTrack/Windows/UserDetailsWindow.xaml
@@ -6,7 +6,57 @@
         xmlns:local="clr-namespace:FitTrack.Windows"
         mc:Ignorable="d"
         Title="UserDetailsWindow" Height="450" Width="800">
+    <Window.Background>
+        <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+            <GradientStop Color="Crimson" Offset="0.0" />
+            <GradientStop Color="Black" Offset="2.0" />
+        </LinearGradientBrush>
+    </Window.Background>
+
+
+
+
     <Grid>
-        
+
+        <!-- Titel -->
+        <Label Content="Edit User Details" FontSize="18" FontWeight="Bold" HorizontalAlignment="Left" Margin="104,49,0,340" Background="Gray" BorderBrush="Black" BorderThickness="2"/>
+
+
+        <!-- Nuvarande användarnamn -->
+        <TextBox x:Name="CurrentUsername"  Width="200" Height="30" Margin="78,155,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" IsEnabled="True"/>
+        <Label Content="Current Username:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="124,125,0,0" Background="Gray" BorderThickness="2" BorderBrush="Black"/>
+
+
+        <!-- Nytt användarnamn -->
+        <Label Content="New Username:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="129,198,0,0" Background="Gray" BorderThickness="2" BorderBrush="Black"/>
+        <TextBox x:Name="NewUsrnameInput" Width="200" Height="30" Margin="80,228,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+
+        <!-- Nytt lösenord -->
+        <Label Content="New Password:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="494,129,0,0" Background="Gray" BorderThickness="2" BorderBrush="Black"/>
+        <PasswordBox x:Name="NewPwdInput" Width="200" Height="30" Margin="434,159,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+
+        <!-- Bekräfta nytt lösenord -->
+        <Label Content="Confirm Password:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="485,198,0,0" Background="Gray" BorderThickness="2" BorderBrush="Black" Height="30"/>
+        <PasswordBox x:Name="ConfirmPwdInput" Width="200" Height="30" Margin="441,228,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+
+        <!-- Välj nytt land -->
+        <Label Content="Country:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="343,260,0,0" Background="Gray" BorderThickness="2" BorderBrush="Black"/>
+        <ComboBox x:Name="CountryComboBox" Width="200" Height="30" Margin="272,290,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <ComboBoxItem Content="Norway"/>
+            <ComboBoxItem Content="Denmark"/>
+            <ComboBoxItem Content="United States"/>
+        </ComboBox>
+
+        <!-- Felmeddelanden -->
+        <TextBlock x:Name="ErrorMessage" Foreground="Red" FontSize="12" HorizontalAlignment="Center" Margin="0,360,0,0" Text=""/>
+
+        <!-- Spara-knapp -->
+        <Button x:Name="SaveBtn" Content="Save" Width="80" Height="30" HorizontalAlignment="Left" Margin="227,0,0,56" VerticalAlignment="Bottom" Background="Gray"  Click="SaveBtn_Click" BorderBrush="Black"/>
+
+        <!-- Avbryt-knapp -->
+        <Button x:Name="CancelBtn"  Content="Cancel" Width="80" Height="30" HorizontalAlignment="Right" Margin="0,0,286,56" VerticalAlignment="Bottom" Background="Gray" Click="CancelBtn_Click" BorderBrush="Black"/>
+
+
+
     </Grid>
 </Window>
