--- a/FitTrack/Windows/ResetPassWindow.xaml
+++ b/FitTrack/Windows/ResetPassWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FitTrack.Windows"
         mc:Ignorable="d"
-        Title="ResetPassWindow" Height="450" Width="800">
+        Title="ResetPassWindow" Height="550" Width="800">
     <Window.Background>
         <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
             <GradientStop Color="Crimson" Offset="0.0" />
@@ -18,16 +18,16 @@
     <Grid>
 
         <!-- Titel -->
-        <Label Content="Reset Your Password" FontSize="18" FontWeight="UltraBold" BorderThickness="5" BorderBrush="White" Background="LightSalmon" 
-               HorizontalAlignment="Center" Margin="0,90,0,300"/>
+        <Label Content="Reset Your Password" FontSize="18" FontWeight="UltraBold" BorderThickness="5" BorderBrush="Black" Background="White" 
+               HorizontalAlignment="Center" Margin="0,90,0,395"/>
 
 
-        <Label Content="Username:" HorizontalAlignment="Left" Margin="144,229,0,172" FontWeight="UltraBold" Background="White"/>
+        <Label Content="Username:" HorizontalAlignment="Left" Margin="144,260,0,237" FontWeight="UltraBold" Background="White"/>
         <TextBox x:Name="UsernameInput" Width="300" Height="30" Margin="30,262,0,142" 
                  HorizontalAlignment="Left" Foreground="Gray" />
 
         <!-- säkerhets fråga -->
-        <Label Content="Select a security question:" HorizontalAlignment="Left" Margin="492,188,0,212" Background="White" FontWeight="UltraBold"/>
+        <Label Content="Select a security question:" HorizontalAlignment="Left" Margin="491,234,0,268" Background="White" FontWeight="UltraBold"/>
         <ComboBox x:Name="SecurityQuestionComboBox" Width="300" Height="30" Margin="418,222,0,182" 
                   HorizontalAlignment="Left">
             <ComboBoxItem Content="What is your favorite color?"/>
@@ -36,7 +36,7 @@
         </ComboBox>
 
         <!-- säkerhets svar-->
-        <Label Content="Security Question Answer:" HorizontalAlignment="Left" Margin="491,271,0,132" Background="White" FontWeight="UltraBold"/>
+        <Label Content="Security Question Answer:" HorizontalAlignment="Left" Margin="491,311,0,187" Background="White" FontWeight="UltraBold"/>
         <TextBox x:Name="SecurityAnswerInput" Width="300" Height="30" Margin="415,302,0,102" 
                  HorizontalAlignment="Left" Foreground="Gray" />
 
