--- a/FitTrack/Windows/WorkoutsWindow.xaml
+++ b/FitTrack/Windows/WorkoutsWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FitTrack"
         mc:Ignorable="d"
-        Title="WorkoutsWindow" Height="450" Width="800">
+        Title="WorkoutsWindow" Height="550" Width="800">
     <Window.Background>
         <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
             <GradientStop Color="#D3D3D3" Offset="0.0" />
@@ -22,15 +22,15 @@
         <ListBox x:Name="WorkoutsList" HorizontalAlignment="Left" Margin="83,70,0,107" Width="476" DisplayMemberPath="Name" />
 
         <!-- Knappar för att hantera träningspass -->
-        <Button x:Name="Addbtn"  Content="Add Workout" Width="150" Height="30" HorizontalAlignment="Right" Margin="0,384,567,20"  Click="Addbtn_Click" />
+        <Button x:Name="Addbtn"  Content="Add Workout" Width="150" Height="30" HorizontalAlignment="Right" Margin="0,434,567,70"  Click="Addbtn_Click" />
         <Button x:Name="RemoveBtn"  Content="Remove Workout" Width="150" Height="30" HorizontalAlignment="Right" Margin="0,384,387,20"  Click="RemoveBtn_Click"/>
         <Button x:Name="DetailsBtn" Content="Details" Width="150" Height="30" HorizontalAlignment="Right" Margin="0,384,218,20" Click="DetailsBtn_Click"/>
 
         <!-- Utloggningsknapp -->
-        <Button x:Name="LogBtn" Content="Log Out" Background="Black" Foreground="White" Width="100"  HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,10,360"  Click="LogBtn_Click"/>
+        <Button x:Name="LogBtn" Content="Log Out" Background="Black" Height="20" Foreground="White" Width="100"  HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,36,444"  Click="LogBtn_Click"/>
 
         <!-- TextBox för att söka efter träningspass -->
-        <TextBox x:Name="SearchTextBox" Text="Search workouts..." Width="190" HorizontalAlignment="Left" Margin="83,33,0,370" KeyUp="SearchTextBox_KeyUp"/>
+        <TextBox x:Name="SearchTextBox" Text="Search workouts..." Width="190" Height="30" HorizontalAlignment="Left" Margin="83,33,0,469" KeyUp="SearchTextBox_KeyUp"/>
 
         <!-- ComboBox för att välja typ av träning -->
         <ComboBox x:Name="WorkoutTypeComboBox" HorizontalAlignment="Left" Margin="564,159,0,0" VerticalAlignment="Top" Width="200" SelectionChanged="WorkoutTypeComboBox_SelectionChanged">
@@ -38,11 +38,11 @@
             <ComboBoxItem Content="Cardio"/>
             <ComboBoxItem Content="Strength"/>
         </ComboBox>
-        
+
 
         <!-- info knapp -->
-        <Button x:Name="InfoBtn" Content="Info" Width="80" Height="30" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Background="Black" Foreground="White" Click="InfoBtn_Click"/>
-        <TextBlock HorizontalAlignment="Left" Margin="599,138,0,0" TextWrapping="Wrap" Text="Choose type of Workout" VerticalAlignment="Top"/>
+        <Button x:Name="InfoBtn" Content="Info" Width="80" Height="30" HorizontalAlignment="Right" Margin="0,24,46,0" VerticalAlignment="Top" Background="Black" Foreground="White" Click="InfoBtn_Click"/>
+        <TextBlock HorizontalAlignment="Left" Margin="599,138,0,0" TextWrapping="Wrap" Text="Choose type of Workout" VerticalAlignment="Top" Width="140" Height="15"/>
 
 
 
