--- a/FitTrack/Windows/ResetPassWindow.xaml
+++ b/FitTrack/Windows/ResetPassWindow.xaml
@@ -18,16 +18,16 @@
     <Grid>
 
         <!-- Titel -->
-        <Label Content="Reset Your Password" FontSize="18" FontWeight="UltraBold" BorderThickness="5" BorderBrush="Black" Background="White" 
+        <Label Content="Reset Your Password" Width="210" Height="40" FontSize="18" FontWeight="UltraBold" BorderThickness="5" BorderBrush="Black" Background="White" 
                HorizontalAlignment="Center" Margin="0,90,0,395"/>
 
 
-        <Label Content="Username:" HorizontalAlignment="Left" Margin="144,260,0,237" FontWeight="UltraBold" Background="White"/>
+        <Label Content="Username:" Width="100" Height="30" HorizontalAlignment="Left" Margin="130,277,0,227" FontWeight="UltraBold" Background="White" BorderThickness="1" BorderBrush="Black"/>
         <TextBox x:Name="UsernameInput" Width="300" Height="30" Margin="30,262,0,142" 
                  HorizontalAlignment="Left" Foreground="Gray" />
 
         <!-- säkerhets fråga -->
-        <Label Content="Select a security question:" HorizontalAlignment="Left" Margin="491,234,0,268" Background="White" FontWeight="UltraBold"/>
+        <Label Content="Select a security question:" Width="170" Height="30" HorizontalAlignment="Left" Margin="491,234,0,268" Background="White" FontWeight="UltraBold" BorderThickness="1" BorderBrush="Black"/>
         <ComboBox x:Name="SecurityQuestionComboBox" Width="300" Height="30" Margin="418,222,0,182" 
                   HorizontalAlignment="Left">
             <ComboBoxItem Content="What is your favorite color?"/>
@@ -36,7 +36,7 @@
         </ComboBox>
 
         <!-- säkerhets svar-->
-        <Label Content="Security Question Answer:" HorizontalAlignment="Left" Margin="491,311,0,187" Background="White" FontWeight="UltraBold"/>
+        <Label Content="Security Question Answer:" Width="170" Height="30" HorizontalAlignment="Left" Margin="491,311,0,187" Background="White" FontWeight="UltraBold" BorderThickness="1" BorderBrush="Black"/>
         <TextBox x:Name="SecurityAnswerInput" Width="300" Height="30" Margin="415,302,0,102" 
                  HorizontalAlignment="Left" Foreground="Gray" />
 
@@ -44,7 +44,7 @@
         <TextBlock x:Name="MessageTextBlock" Foreground="Red" FontSize="12" 
                    HorizontalAlignment="Center" Margin="0,260,0,0"/>
 
-        <Button x:Name="SubmitBtn" Content="Submit" Width="80" Height="30" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,367,0,0" Background="White" Click="SubmitBtn_Click"/>
+        <Button x:Name="SubmitBtn" Content="Submit" Width="80" Height="30" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,439,0,0" Background="White" Click="SubmitBtn_Click" BorderThickness="1" BorderBrush="Black"/>
 
         <TextBlock x:Name="question" HorizontalAlignment="Left" Margin="10,90,0,0" FontWeight="Bold"/>
 
